<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_title"
            style="@style/style_common_edit_multi"
            android:layout_margin="@dimen/dp_10"
            android:hint="@string/input_title"
            android:minHeight="@dimen/dp_60"
            android:textSize="@dimen/sp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_status"
        style="@style/style_item_card_view"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_title">

        <TextView
            style="@style/style_item_card_font"
            android:text="@string/plan_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_status"
            style="@style/style_font_gray"
            android:text="@string/to_be_executed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_module"
        style="@style/style_item_card_view"
        android:background="@color/white"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_status">

        <TextView
            style="@style/style_item_card_font"
            android:text="@string/execution_module"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_plan_module"
            style="@style/style_font_gray"
            android:text="@string/select_or_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_module_more"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_module_more"
            android:layout_width="@dimen/dp_20"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/svg_more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_plan_day"
        style="@style/style_item_card_view"
        android:background="@color/white"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_module">

        <TextView
            style="@style/style_item_card_font"
            android:text="@string/plan_day"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_plan_day"
            style="@style/style_item_card_view"
            android:layout_width="@dimen/dp_40"
            android:gravity="center"
            android:hint="@string/default_day"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@id/tv_day"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_day"
            style="@style/style_font_gray"
            android:text="@string/day"
            app:layout_constraintBottom_toBottomOf="@id/edit_plan_day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/edit_plan_day" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_cycle"
        style="@style/style_item_card_view"
        android:background="@color/white"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_plan_day">

        <TextView
            style="@style/style_item_card_font"
            android:text="@string/plan_cycle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_start_date"
            style="@style/style_font_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_date_break"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2020年5月15日" />

        <TextView
            android:id="@+id/tv_date_break"
            style="@style/style_font_gray"
            android:text="@string/until"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_end_date"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_end_date"
            style="@style/style_font_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2020年5月15日" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--   <TextView
           android:id="@+id/tv_add"
           style="@style/style_item_card_view"
           android:background="@color/white"
           android:gravity="center"
           android:text="@string/add_content"
           android:textColor="@color/color_theme"
           android:textSize="@dimen/sp_16"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/cl_cycle" />-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_2"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/cl_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_cycle" />

    <ImageView
        android:id="@+id/iv_add"
        android:layout_width="@dimen/dp_58"
        android:layout_height="@dimen/dp_58"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/dp_10"
        android:contentDescription="@string/app_name"
        android:src="@drawable/svg_add_content"
        app:layout_constraintBottom_toTopOf="@id/cl_bottom"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_commit"
            style="@style/style_common_btn"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/commit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_modify"
            style="@style/style_common_btn"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/modify"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>